...
                        settings.lastOpenedRepo = nil
                    } label: {
                        Label("Clear", systemImage: "trash")
                    }
                }
            } label: {
                Label("Open Recent", systemImage: "clock")
            }
        }
    }

    private static let diffTextViewID = NSUserInterfaceItemIdentifier("diffTextView")

...
